--- a/style.css
+++ b/style.css
@@ -249,9 +249,20 @@ body {
   75% { transform: translate(-50%, -50%) rotateX(270deg) rotateY(100deg) rotateZ(140deg); opacity: 0.4; }
 }
 @media (max-width: 768px) {
-  body{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  }
+  
+.navbar-brand {
+  font-weight: 700;
+  font-size: 2.2rem;
+  text-transform: uppercase;
+  background: linear-gradient(to bottom, #ffffff 0%, #00d8ff 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-shadow: 0 0 10px rgba(0, 216, 255, 0.3);
+  font-family: cursive;
+
+}
+
   .orb-container {
       width: 300px;
       height: 300px;
