--- a/style.css
+++ b/style.css
@@ -760,6 +760,15 @@ body {
   0% {
     transform: translate(-50%, -50%) rotate(0deg);
   }
+  25%{
+    transform: translate(-50%, -50%) rotate(60deg);
+  }
+  50%{
+    transform: translate(-50%, -50%) rotate(120deg);
+  }
+  75%{
+    transform: translate(-50%, -50%) rotate(180deg);
+  }
   100% {
     transform: translate(-50%, -50%) rotate(360deg);
   }
@@ -790,16 +799,4 @@ body {
   body, .hero-section {
     background: #000 !important;
   }
-
-  .navbar-brand {
-  font-weight: 700;
-  font-size: 2.2rem;
-  text-transform: uppercase;
-  background: linear-gradient(to bottom, #ffffff 0%, #00d8ff 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  text-shadow: 0 0 10px rgba(0, 216, 255, 0.3);
-     font-family: 'Courier New', Courier, monospace;
-}
 }
