--- a/style.css
+++ b/style.css
@@ -771,7 +771,17 @@ body {
     background: #000 !important;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-
+  .navbar-brand {
+    font-weight: 700;
+    font-size: 2.2rem;
+    text-transform: uppercase;
+    background: linear-gradient(to bottom, #ffffff 0%, #00d8ff 100%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-shadow: 0 0 10px rgba(0, 216, 255, 0.3);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  }
   .orb-container {
     width: 300px;
     height: 300px;
