--- a/style.css
+++ b/style.css
@@ -756,7 +756,14 @@ body {
 }
 
 /* Адаптивность */
-
+@keyframes simple-spin {
+ from { 
+     transform: rotate(0deg);
+  }
+  to {
+         transform: rotate(360deg);
+  }
+}
 
 @media (max-width: 768px) {
   body,
@@ -790,14 +797,7 @@ body {
     text-shadow: 0 0 10px rgba(0, 216, 255, 0.3);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
-  @keyframes simple-spin {
-    0% {
-      transform: translate(-50%, -50%) rotate(0deg);
-    }
-    100% {
-      transform: translate(-50%, -50%) rotate(360deg);
-    }
-  }
+
   .orb-1 { width: 280px; height: 280px; }
   .orb-2 { width: 220px; height: 220px; }
   .orb-3 { width: 160px; height: 160px; }
