--- a/style.css
+++ b/style.css
@@ -755,14 +755,30 @@ body {
   transform: rotate(45deg);
 }
 
+/* Адаптивность */
 
 
 @media (max-width: 768px) {
   body,
   .hero-section {
     background: #000 !important;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
   }
+
+  
+
+  .orb-container {
+
+    width: 0;
+    height: 0;
+   
+    
+  }
+  
+
+
+
+
   .navbar-brand {
     font-weight: 700;
     font-size: 2.2rem;
@@ -775,6 +791,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   }
 
+  
 
 
   .hero-section::before {
