--- a/style.css
+++ b/style.css
@@ -755,7 +755,21 @@ body {
   transform: rotate(45deg);
 }
 
+/* Адаптивность */
+.optimized-animation {
+  width: 150vmax;
+  height: 150vmax;
+}
 
+.optimized-orb {
+animation: none !important;
+
+transition: transform 0.1s linear;
+
+
+  box-shadow: none;
+  animation-duration: 40s !important;
+}
 
 @media (max-width: 768px) {
   body,
@@ -781,7 +795,9 @@ body {
   
 /* Мобильная версия — скрыть orb-container (CSS-анимации) */
 
-
+  .orb-container {
+    display: none !important;
+}
 
 /* Десктопная версия — скрыть optimized-orb (JS-анимации) */
 
