--- a/style.css
+++ b/style.css
@@ -767,10 +767,11 @@ body {
   }
 
   .container{
-    font-family:'Courier New', Courier, monospace;
-    color:burlywood;
+   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    color:#466267;
   }
   .navbar-brand {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 700;
     font-size: 2.2rem;
     text-transform: uppercase;
