--- a/style.css
+++ b/style.css
@@ -785,8 +785,8 @@ body {
 
     .hero-title {
       font-family: 'Inter', sans-serif !important;
-      color: #ffffff !important; /* или любой нужный цвет */
-      font-size: 24px; /* можно подогнать размер под телефон */
+      color: white !important; /* или любой нужный цвет */
+      font-size: 48px; /* можно подогнать размер под телефон */
     }
   
   
