--- a/style.css
+++ b/style.css
@@ -785,10 +785,9 @@ body {
 
    h1 {
       font-family: 'Inter', sans-serif !important;
-      color: white !important; /* или любой нужный цвет */
-      font-size: 48px; /* можно подогнать размер под телефон */
+      color: whitesmoke; /* или любой нужный цвет */
+      font-size: 40px; /* можно подогнать размер под телефон */
     }
-  
   
 
   .hero-subtitle {
