--- a/style.css
+++ b/style.css
@@ -770,7 +770,7 @@ body {
 
  
   .navbar-brand {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     font-weight: 700;
     font-size: 2.2rem;
     text-transform: uppercase;
