--- a/style.css
+++ b/style.css
@@ -769,8 +769,8 @@ body {
 
 
  
-      .navbar-brand {
-    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  .navbar-brand {
+    font-family:monospace;
     font-weight: 700;
     font-size: 2.2rem;
     text-transform: uppercase;
@@ -780,11 +780,10 @@ body {
     background-clip: text;
     text-shadow: 0 0 10px rgba(0, 216, 255, 0.3);
   }
+
   /* Дополнительные улучшения для мобильных */
 
-  @media (max-width: 768px) {
-
-
+  
     .hero-title {
       font-family: 'Inter', sans-serif !important;
       font-size: 40px !important;
@@ -798,7 +797,7 @@ body {
       -webkit-text-fill-color: white !important;
       color: white !important;
     }
-  }
+  
   
 
   .hero-subtitle {
