--- a/style.css
+++ b/style.css
@@ -615,6 +615,10 @@ body {
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.3);
 }
 
+h5{
+  font-size: 12.7px;
+  padding-top: 5%;
+}
 .form-control {
   background: rgba(255, 255, 255, 0.08);
   border: 1px solid rgba(255, 255, 255, 0.1);
