--- a/style.css
+++ b/style.css
@@ -774,7 +774,7 @@ h5{
 
  
   .navbar-brand {
-    font-family:monospace;
+    font-family:Marker Felt, fantasy;
     font-weight: 700;
     font-size: 2.2rem;
     text-transform: uppercase;
